sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:6: error: missing argument list for method apply in object List
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `apply _` or `apply(_)` instead of `apply`.
  var playersColor = List[Int]
                         ^